--- a/HomeWorryParty/build.gradle
+++ b/HomeWorryParty/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+    // Mockito
+    testImplementation 'org.mockito:mockito-core:4.11.0'
 }
 
 
